rolloutExample/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ingress-app
spec:
  replicas: 4
  selector: 
    matchLabels:
      name: ingress
  template:
    metadata:
      labels:
        name: ingress
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: ingress-blue
        image: blue/server:1.0
  strategy:
    canary:
      stableService: ingress-app-stable
      canaryService: ingress-app-canary
      canaryMetadata:
        annotations:
          role: canary
        labels:
          role: canary
      analysis: 
        templates:
        - templateName: webcheck
        args:
        - name: service-name
          value: ingress
      steps:
      - setWeight: 20
      - pause: { duration: 30}
      - setWeight: 20
      - pause: { duration: 30}
