rolloutExample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressapp-stable
  labels:
    app: ingress
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: ingress
---
apiVersion: v1
kind: Service
metadata:
  name: ingressapp-canary
  labels:
    app: ingress
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: ingress
