rolloutExample/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: server-demo
