rolloutExample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: khoanlm2.local
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:   
              service:
                name: ingress-stable
                port:
                  number: 8080
